tests/e2e/keywords/int_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    int = 1
      ^^^

E0020: `int` is a reserved keyword
